# EKA2L1

./: .clang-format  .gitignore  .gitmodules  .travis.yml  BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md  appveyor.yml  azure-pipelines.yml  changelog.txt  crowdin.yml  defaultbank.sf2  deploy.sh  format.bat
src/emu/: CMakeLists.txt  EKA2L1.cpp
src/emu/android/: .gitignore  build.gradle  settings.gradle
src/emu/android/app/: build.gradle  proguard-rules.pro
src/emu/arm/: CMakeLists.txt
src/emu/arm/src/: arm_analyser.cpp  arm_analyser_capstone.cpp  arm_dynarmic.cpp  arm_factory.cpp  arm_interface_extended.cpp  arm_llvm_recompiler.cpp  arm_unicorn.cpp  arm_utils.cpp
src/emu/bridge/: CMakeLists.txt
src/emu/bridge/src/: return_val.cpp
src/emu/common/: CMakeLists.txt
src/emu/common/src/: algorithm.cpp  allocator.cpp  arghandler.cpp  arm_cpudetect.cpp  armemitter.cpp  atomic.cpp  bytepair.cpp  bytes.cpp  chunkyseri.cpp  color.cpp  crypt.cpp  cvt.cpp  data_displayer.cpp  dictcomp.cpp  dynamicfile.cpp  fileutils.cpp  flate.cpp  hash.cpp  ini.cpp  jniutils.cpp  language.cpp  localizer.cpp  log.cpp  paint.cpp  path.cpp  random.cpp  region.cpp  runlen.cpp  svg.cpp  sync.cpp  thread.cpp  time.cpp  types.cpp  unicode.cpp  upnp.cpp  url.cpp  virtualmem.cpp  watcher.cpp  watcher_null.cpp  watcher_null.h  (+5 more)
src/emu/config/: CMakeLists.txt
src/emu/config/src/: app_settings.cpp  config.cpp  panic_blacklist.cpp
src/emu/console/: CMakeLists.txt  api_example.cpp  console.rc  main.cpp  test.cpp
src/emu/console/resources/: LICENSE_J
src/emu/console/src/: cmdhandler.cpp  guithread.cpp  main.cpp  seh_handler.cpp  state.cpp  test.cpp  thread.cpp
src/emu/core/: CMakeLists.txt
src/emu/core/src/: core.cpp  core_api.cpp  core_arm.cpp  core_io.cpp  core_kernel.cpp  core_mem.cpp  core_timing.cpp  ipc.cpp  page_table.cpp  process.cpp  vfs.cpp
src/emu/cpu/: CMakeLists.txt  README.md
src/emu/cpu/src/: arm_analyser.cpp  arm_analyser_capstone.cpp  arm_dynarmic.cpp  arm_factory.cpp  arm_utils.cpp
src/emu/debugger/: CMakeLists.txt
src/emu/debugger/assets/: credits.yml  difficulties_meta.xml
src/emu/debugger/src/: debugger.cpp  imgui_debugger.cpp  logger.cpp
src/emu/disasm/: CMakeLists.txt
src/emu/disasm/src/: disasm.cpp
src/emu/dispatch/: CMakeLists.txt
src/emu/dispatch/src/: audio.cpp  camera.cpp  dispatcher.cpp  hui.cpp  register.cpp  screen.cpp  video.cpp
src/emu/drivers/: CMakeLists.txt  note.txt
src/emu/drivers/resources/: defaultbank.hsb  fill.frag  fill.vert  pen.frag  sprite_mask.frag  sprite_norm.frag  sprite_norm.vert
src/emu/drivers/src/: itc.cpp  sdl2_scoping.cpp  sdl2_scoping.h
src/emu/epoc/: CMakeLists.txt
src/emu/epoc/src/: epoc.cpp  hal.cpp  ipc.cpp  kernel.cpp  mem.cpp  page_table.cpp  ptr.cpp  reg.cpp  svc.cpp  timing.cpp  vfs.cpp
src/emu/gdbstub/: CMakeLists.txt
src/emu/gdbstub/src/: gdbstub.cpp
src/emu/hle/: CMakeLists.txt
src/emu/hle/src/: return_val.cpp
src/emu/imgui/: CMakeLists.txt  EKA2L1.cpp  EKA2L1.h  gui_sys.cpp  gui_sys.h  imguirdr.h  internal.cpp  internal.h  main.cpp  memory_editor.h  menu.cpp  menu.h  window.cpp  window.h
src/emu/imgui/installer/: CMakeLists.txt  installer.cpp  installer.h
src/emu/imgui/io/: CMakeLists.txt  imguiio.cpp  imguiio.h
src/emu/imgui/logger/: CMakeLists.txt  logger.cpp  logger.h
src/emu/imgui/opengl/: CMakeLists.txt  imguirdr.cpp
src/emu/io/: CMakeLists.txt
src/emu/io/src/: vfs.cpp
src/emu/j2me/: CMakeLists.txt
src/emu/j2me/src/: applist.cpp  common.cpp  interface.cpp  kmidrun.cpp
src/emu/kernel/: CMakeLists.txt
src/emu/kernel/src/: btrace.cpp  change_notifier.cpp  chunk.cpp  codedump_collector.cpp  codeseg.cpp  condvar.cpp  guomen_process.cpp  ipc.cpp  kernel.cpp  kernel_obj.cpp  ldd.cpp  libmanager.cpp  library.cpp  msgqueue.cpp  mutex.cpp  object_ix.cpp  process.cpp  property.cpp  reg.cpp  scheduler.cpp  sema.cpp  server.cpp  session.cpp  svc.cpp  thread.cpp  timer.cpp  timing.cpp  undertaker.cpp
src/emu/lazarus/: EKA2L1.lpi  EKA2L1.lpr  EKA2L1.lps  apiwrapper.pas  apps_registry.sdb  config.json  dvcmapping.lfm  dvcmapping.pas  inflatedController.mt  installdialog.lfm  installdialog.pas  mainform.lfm  mainform.pas  nokiaDefaltedTemp.seg  symbian.pas
src/emu/ldd/: CMakeLists.txt
src/emu/ldd/src/: collection.cpp
src/emu/loader/: CMakeLists.txt
src/emu/loader/src/: Vectorized_Graphics_Note.txt  e32img.cpp  eka2img.cpp  fpsx.cpp  gdr.cpp  mbm.cpp  mif.cpp  nvg.cpp  rofs.cpp  rom.cpp  romimage.cpp  rsc.cpp  sis.cpp  sis_fields.cpp  sis_old.cpp  sis_script_intepreter.cpp  spi.cpp  svgb.cpp
src/emu/manager/: CMakeLists.txt
src/emu/manager/src/: app_settings_manager.cpp  config.cpp  config_manager.cpp  device_manager.cpp  manager.cpp  package_manager.cpp  rpkg.cpp  script_manager.cpp  sis.cpp  sis_fields.cpp  sis_old.cpp  sis_script_interpreter.cpp  sis_v1_installer.cpp  software.cpp
src/emu/mem/: CMakeLists.txt
src/emu/mem/src/: chunk.cpp  control.cpp  mem.cpp  mmu.cpp  page.cpp  process.cpp
src/emu/package/: CMakeLists.txt
src/emu/package/src/: manager.cpp  registry.cpp  sis_script_interpreter.cpp  sis_v1_installer.cpp
src/emu/qt/: CMakeLists.txt  EKA2L1.def  EKA2L1.entitlements  duck.icns  eka2l1.desktop  eka2l1.qrc  eka2l1.rc  version.h
src/emu/qt/assets/: credits.yml
src/emu/qt/resources/: resource_origins.txt
src/emu/scripting/: CMakeLists.txt  GUIDE.md  README.md  setup.py
src/emu/services/: CMakeLists.txt
src/emu/system/: CMakeLists.txt
src/emu/utils/: CMakeLists.txt
src/emu/vfs/: CMakeLists.txt
src/tests/: CMakeLists.txt  tests.cpp
src/tests/common/: CMakeLists.txt  algorithm.cpp  allocator.cpp  bytes.cpp  chunkyseri.cpp  crypt.cpp  ini.cpp  paint.cpp  path.cpp  pystr.cpp  runlen.cpp
src/tests/core/: CMakeLists.txt  core_timing.cpp  vfs.cpp
src/tests/drivers/: CMakeLists.txt  README.md  fb.cpp  main.cpp
src/tests/epoc/: CMakeLists.txt  timing.cpp  vfs.cpp
tools/exportmeta/: CMakeLists.txt  README.md
tools/exportmeta/src/: main.cpp
tools/exportyml/: CMakeLists.txt
tools/exportyml/src/: main.cpp
(+2579 files in other folders)
